--- a/src/renderer/src/assets/style.css
+++ b/src/renderer/src/assets/style.css
@@ -2,7 +2,11 @@ body{
   background-color: black;
   padding: 0;
   margin: 0;
+  color: white;
 }
 h1{
   color: white;
+}
+.content{
+  padding-top: 24px;
 }
